# CIHI_agents_team

./: .gitignore  README.md  config.py  main.py  pyproject.toml  upload_docs.py
agents/: cihi_web_agent.py  create_team.py  doc_agent.py  general_agent.py  nursing_datatable_agent.py  visualization_workflow.py
data/: Table_2__Summary_of_regulated_nursing_supply__workforce_and_workforce_employed_in_direct_care__by_type_of_professional__selected_jurisdictions__2015_to_2024.csv  Table_3__Supply_of_regulated_nurses__by_jurisdiction_and_type_of_professional__2015_to_2024.csv  Table_4__Workforce_of_regulated_nurses__by_jurisdiction_and_type_of_professional__2015_to_2024.csv
data/tmp/: data_dictionary.db  methodology_notes.db
data/tmp/chromadb_data_dictionary/: chroma.sqlite3
data/tmp/chromadb_meth_notes/: chroma.sqlite3
utils/: auth.py
